--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,12 @@ cmake_minimum_required(VERSION 3.0.0)
 project(hello_wasm VERSION 0.1.0)
 
 add_executable(side side.c)
-set_target_properties(side PROPERTIES SUFFIX ".wasm")
-target_link_options(side PRIVATE
-    "--no-entry"
-    "-sSIDE_MODULE"
-)
+target_compile_options(side PRIVATE "-fPIC")
 target_link_options(side PRIVATE
     "--no-entry"
     "-sSIDE_MODULE=2"
 )
+set_target_properties(side PROPERTIES SUFFIX ".wasm")
 
 add_executable(main main.c)
 target_compile_options(main PRIVATE "-fPIC")
@@ -20,3 +17,4 @@ target_link_options(main PRIVATE
     "-sMAIN_MODULE=2"
 )
 set_target_properties(main PROPERTIES SUFFIX ".js")
+add_dependencies(main side)
